--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="https://akm918.github.io/"><img class="app-header-avatar" src="/avatar.jpg" alt="John Doe" /></a>
+      <a href="https://akm918.github.io/"><img class="app-header-avatar" src="/tt.jpg" alt="John Doe" /></a>
       <h1>AKM918</h1>
       <p>个人博客，闲暇之余会写一些关于开发或者测试文章，让我们一起努力吧，一起创造这个世界！</p>
       <div class="app-header-social">
