--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <a href="https://akm918.github.io/"><img class="app-header-avatar" src="/tt.jpg" alt="John Doe" /></a>
       <h1>AKM918</h1>
       <p>个人博客，闲暇之余会写一些关于开发或者测试文章，让我们一起努力吧，一起创造这个世界！</p>
+      <!-- 小老鼠游戏控件 -->
+		<div className="sidebarMouse"><object type="application/x-shockwave-flash" style="outline:none;" data=" https://files.cnblogs.com/files/jingmoxukong/mouse.swf?up_bodyColor=f0e9cc&amp;up_feetColor=D4C898&amp;up_eyeColor=000567&amp;up_wheelSpokeColor=DEDEDE&amp;up_wheelColor=FFFFFF&amp;up_waterColor=E0EFFF&amp;up_earColor=b0c4de&amp;up_wheelOuterColor=FF4D4D&amp;up_snoutColor=F7F4E9&amp;up_bgColor=F0E4E4&amp;up_foodColor=cba920&amp;up_wheelCenterColor=E4EB2F&amp;up_tailColor=E6DEBE&amp;" width="240" height="160"><param name="movie" value=" https://files.cnblogs.com/files/jingmoxukong/mouse.swf?up_bodyColor=f0e9cc&amp;up_feetColor=D4C898&amp;up_eyeColor=000567&amp;up_wheelSpokeColor=DEDEDE&amp;up_wheelColor=FFFFFF&amp;up_waterColor=E0EFFF&amp;up_earColor=b0c4de&amp;up_wheelOuterColor=FF4D4D&amp;up_snoutColor=F7F4E9&amp;up_bgColor=F0E4E4&amp;up_foodColor=cba920&amp;up_wheelCenterColor=E4EB2E&amp;up_tailColor=E6DEBE&amp;"><param name="AllowScriptAccess" value="always"><param name="wmode" value="opaque"></object>
+      </div>
       <div class="app-header-social">
         
       </div>
