--- a/index.html
+++ b/index.html
@@ -27,9 +27,65 @@
       <a href="https://akm918.github.io/"><img class="app-header-avatar" src="/tt.jpg" alt="John Doe" /></a>
       <h1>AKM918</h1>
       <p>个人博客，闲暇之余会写一些关于开发或者测试文章，让我们一起努力吧，一起创造这个世界！</p>
-      <!-- 小老鼠游戏控件 -->
-		<div className="sidebarMouse"><object type="application/x-shockwave-flash" style="outline:none;" data=" https://files.cnblogs.com/files/jingmoxukong/mouse.swf?up_bodyColor=f0e9cc&amp;up_feetColor=D4C898&amp;up_eyeColor=000567&amp;up_wheelSpokeColor=DEDEDE&amp;up_wheelColor=FFFFFF&amp;up_waterColor=E0EFFF&amp;up_earColor=b0c4de&amp;up_wheelOuterColor=FF4D4D&amp;up_snoutColor=F7F4E9&amp;up_bgColor=F0E4E4&amp;up_foodColor=cba920&amp;up_wheelCenterColor=E4EB2F&amp;up_tailColor=E6DEBE&amp;" width="240" height="160"><param name="movie" value=" https://files.cnblogs.com/files/jingmoxukong/mouse.swf?up_bodyColor=f0e9cc&amp;up_feetColor=D4C898&amp;up_eyeColor=000567&amp;up_wheelSpokeColor=DEDEDE&amp;up_wheelColor=FFFFFF&amp;up_waterColor=E0EFFF&amp;up_earColor=b0c4de&amp;up_wheelOuterColor=FF4D4D&amp;up_snoutColor=F7F4E9&amp;up_bgColor=F0E4E4&amp;up_foodColor=cba920&amp;up_wheelCenterColor=E4EB2E&amp;up_tailColor=E6DEBE&amp;"><param name="AllowScriptAccess" value="always"><param name="wmode" value="opaque"></object>
-      </div>
+      <div class="container" id="screenShotContainer">
+					<div class="heading">
+						<div class="num-container">
+							<div class="target-container num-1000" data-inited="1">
+								<div class="x-title">挑战目标</div>
+								<div class="x-the-num" id="game_target">1024</div>
+							</div>
+						</div>
+						<div class="scores-container">
+							<div class="time-container">
+								<div class="x-title">移动次数</div>
+								<div class="x-the-num">227</div>
+							</div>
+							<div class="score-container num-1000">
+								<div class="x-title">当前总分</div>
+								<div class="x-the-num">2776</div>
+							<div class="score-addition">+4</div></div>
+							<div class="best-container num-1000">
+								<div class="x-title">最佳总分</div>
+								<div class="x-the-num">2776</div>
+							</div>
+						</div>
+					</div>
+					<div class="game-container">
+						<div class="game-message msg-animation game-over">
+							<p>挑战失败，分享出去和微信好友们比一比吧</p>
+							<div class="lower">
+								<a class="retry-button">重来</a><a class="keep-playing-button">继续</a>
+							</div>
+						</div>
+						<div class="grid-container">
+							<div class="grid-row">
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+							</div>
+							<div class="grid-row">
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+							</div>
+							<div class="grid-row">
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+							</div>
+							<div class="grid-row">
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+								<div class="grid-cell"></div>
+							</div>
+						</div>
+						<div class="tile-container"><div class="tile tile-4 tile-position-1-1"><div class="tile-inner">4</div></div><div class="tile tile-8 tile-position-1-2"><div class="tile-inner">8</div></div><div class="tile tile-2 tile-position-1-3"><div class="tile-inner">2</div></div><div class="tile tile-8 tile-position-1-4"><div class="tile-inner">8</div></div><div class="tile tile-8 tile-position-2-1"><div class="tile-inner">8</div></div><div class="tile tile-256 tile-position-2-2"><div class="tile-inner">256</div></div><div class="tile tile-16 tile-position-2-3"><div class="tile-inner">16</div></div><div class="tile tile-4 tile-position-2-4"><div class="tile-inner">4</div></div><div class="tile tile-2 tile-position-3-1"><div class="tile-inner">2</div></div><div class="tile tile-2 tile-position-3-1"><div class="tile-inner">2</div></div><div class="tile tile-4 tile-position-3-1 tile-merged"><div class="tile-inner">4</div></div><div class="tile tile-32 tile-position-3-2"><div class="tile-inner">32</div></div><div class="tile tile-128 tile-position-3-3"><div class="tile-inner">128</div></div><div class="tile tile-8 tile-position-3-4"><div class="tile-inner">8</div></div><div class="tile tile-2 tile-position-4-1 tile-new"><div class="tile-inner">2</div></div><div class="tile tile-4 tile-position-4-2"><div class="tile-inner">4</div></div><div class="tile tile-16 tile-position-4-3"><div class="tile-inner">16</div></div><div class="tile tile-4 tile-position-4-4"><div class="tile-inner">4</div></div></div>
+					</div>
+				</div>
       <div class="app-header-social">
         
       </div>
